languages/montiarc-fe/src/test/resources/contextconditions/invalid/ConnectorPiercingInwardsThroughInterface.arc
package invalid;

component ConnectorPiercingInwardsThroughInterface {
  component A {
    component Inner {
      port in String innerIn;
    }
  }
  
  component B {
    port out String bOut;
  }
  
  connect b.bout -> a.inner.innerIn;
}